--- a/App1.2/App1.2/App1.2.csproj
+++ b/App1.2/App1.2/App1.2.csproj
@@ -56,6 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FirmBDDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FirmBDDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +86,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="FirmBDDataSet.xsc">
+      <DependentUpon>FirmBDDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="FirmBDDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>FirmBDDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="FirmBDDataSet.xss">
+      <DependentUpon>FirmBDDataSet.xsd</DependentUpon>
+    </None>
     <None Include="MyBDDataSet.xsc">
       <DependentUpon>MyBDDataSet.xsd</DependentUpon>
     </None>
@@ -107,6 +123,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="FirmBD.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="MetroFramework.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
