--- a/App1.2/App1.2/App1.2.csproj
+++ b/App1.2/App1.2/App1.2.csproj
@@ -133,7 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FirmBD.mdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="MetroFramework.txt" />
   </ItemGroup>
